Thu May 17 15:42:36 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Reactor.h: Clarified the timeout conditions on
          run_reactor_event_loop(). Thank you to Mohsin Zaidi for this
          clarification.

        * THANKS: Added Mohsin Zaidi to the Hall of Fame.

Wed May 16 17:41:21 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.cpp (ACE_Thread_ID::to_string): Use string literals
          for the sprintf formats rather than build them up. Things have
          simplified to the point we don't need that any longer. Thanks to
          Rick Ohnemus for providing the patch. Fixes Bugzilla #4021.

Wed May 16 06:44:23 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Bug_4008_Regression_Test.cpp:
          Removed bug 4008 test, it was testing incorrect assumptions

Wed May 16 06:42:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
        * ace/Basic_Types.cpp:
        * ace/Functor.inl:
        * ace/High_Res_Timer.inl:
        * ace/OS_NS_time.h:
        * ace/OS_NS_time.inl:
        * tests/Basic_Types_Test.cpp:
        * tests/Bug_2434_Regression_Test.cpp:
        * tests/Time_Value_Test.cpp:
          More cleanup due to removal of NSK

        * ace/Basic_Types.inl:
          Removed this file.

Tue May 15 18:16:09 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.inl:
        * ace/Atomic_Op_T.h:
        * ace/Basic_Types.h:
        * ace/Basic_Types.inl:
        * ace/Basic_Types.cpp:
        * ace/CDR_Base.h:
        * ace/Functor.h:
        * ace/Functor.inl:
        * ace/Handle_Set.cpp:
        * ace/High_Res_Timer.cpp:
        * ace/Log_Msg.cpp:
        * ace/Numeric_Limits.h:
        * ace/OS_NS_Thread.inl:
        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_stdlib.inl:
        * ace/OS_NS_sys_select.inl:
        * ace/OS_NS_sys_wait.inl:
        * ace/OS_NS_time.h: